--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,11 +4,11 @@ server {
     server_name 84.252.130.163;
 
     location /static/ {
-        root /var/html/;
+        root /api_yamdb/;
     }
 
     location /media/ {
-        root /var/html/;
+        root /api_yamdb/;
     }
 
     location / {
