--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
     image: kobzev5612/api_yamdb:v1.00
     restart: always
     volumes:
-      - static_value:/api_yamdb/static/
-      - media_value:/api_yamdb/media/
+      - static_value:/static/
+      - media_value:/media/
     depends_on:
       - db
     env_file:
