--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
     image: kobzev5612/api_yamdb:v1.00
     restart: always
     volumes:
-      - static_value:/static/
-      - media_value:/media/
+      - static_value:/app/static/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
@@ -30,5 +30,6 @@ services:
       - web
 
 volumes:
+  postgres_data:
   static_value:
   media_value:
