--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,6 +1,8 @@
+server_tokens off;
 server {
     listen 80;
 
+    server_name 127.0.0.1;
     server_name 84.252.130.163;
 
     location /static/ {
