--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.8'
 
 services:
   db:
@@ -18,6 +18,8 @@ services:
       - db
     env_file:
       - ./.env
+    links:
+      - db
   nginx:
     image: nginx:1.21.3-alpine
     restart: always
@@ -31,6 +33,5 @@ services:
       - web
 
 volumes:
-  db_value:
   static_value:
   media_value:
